--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bootstrap": "^5.3.3",
     "connect-session-sequelize": "^7.1.7",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -9,6 +10,7 @@
     "handlebars": "^4.7.8",
     "node": "^22.5.1",
     "pg": "^8.12.0",
+    "sass": "^1.77.8",
     "sequelize": "^6.37.3"
   }
 }
